[gd_scene load_steps=4 format=3 uid="uid://cbf0vxt0sorvk"]

[ext_resource type="FontFile" uid="uid://ci3inxy6xbgfy" path="res://assets/globali/GUI/fonts/ThaleahFat.ttf" id="1_emqv0"]
[ext_resource type="Script" path="res://scripts/globali/UI/menu/options_menu/audio_slider_settings.gd" id="1_otoeb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_emxkn"]

[node name="AudioSliderSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_otoeb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 42

[node name="AudioNameLbl" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_emqv0")
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_emxkn")

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.001

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_emxkn")

[node name="AudioValueLbl" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_emqv0")
theme_override_font_sizes/font_size = 32
text = "99
"

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="on_value_changed"]
